utoipa-gen/tests/snapshots/path_derive__derive_images_as_application_octet_stream.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&request_body"
snapshot_kind: text
---
{
  "content": {
    "image/jpg": {},
    "image/png": {}
  }
}
