utoipa-gen/tests/snapshots/path_derive__derive_img_png_request_body.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&request_body"
snapshot_kind: text
---
{
  "content": {
    "image/png": {
      "schema": {
        "contentEncoding": "base64",
        "type": "string"
      }
    }
  },
  "required": true
}
