utoipa-gen/tests/snapshots/path_derive__derive_into_params_option_with_deserialize_with_is_required.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: value
---
[
  {
    "in": "query",
    "name": "name",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "name2",
    "required": false,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "name3",
    "required": false,
    "schema": {
      "type": "string"
    }
  }
]
