utoipa-gen/tests/snapshots/path_derive__derive_into_params_with_ignored_eq_false_field.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: value
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "name",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "__this_is_private",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
