utoipa-gen/tests/snapshots/path_derive__derive_into_params_with_ignored_field.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: value
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "name",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
