utoipa-gen/tests/snapshots/path_derive__derive_into_params_with_ignored_struct_field.snap
---
source: utoipa-gen/tests/path_derive.rs
assertion_line: 1856
expression: value
---
[
  {
    "in": "query",
    "name": "value",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
